fix too much bottom padding + copyright notice

--- a/assets/css/_sass/_layout.scss
+++ b/assets/css/_sass/_layout.scss
@@ -32,7 +32,7 @@ body {
         flex: 1;
         max-width: 600px;
         margin: 0 auto;
-        padding: 6rem 2rem;
+        padding: 6rem 2rem 0rem 2rem;
         display: flex;
         flex-direction: column;
         align-items: center;
