--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,7 +30,7 @@ body .container {
   flex: 1;
   max-width: 600px;
   margin: 0 auto;
-  padding: 6rem 2rem;
+  padding: 6rem 2rem 0rem 2rem;
   display: flex;
   flex-direction: column;
   align-items: center;
